Fixing Alignment

--- a/css/main.css
+++ b/css/main.css
@@ -164,26 +164,32 @@ button:active {
     box-shadow: 1px 1px 50px black;
 }
 
+
+.wanted {
+    padding-top: 2em;
+    text-align: center;
+}
+
 @media only screen and (min-width: 20em) {
 
-    .nav {
-      text-align: center;
+.nav {
+  text-align: center;
   }
 
-    .nav li {
-      display: block;
+.nav li {
+  display: block;
   }
 
-    .bucket {
-     width: 100%;
+.bucket {
+    width: 100%;
     margin: auto;
     padding: 1em;
 }
-        
 
 }
 
 @media only screen and (min-width: 40em) {
+    
 
     .logo {
         float: left;
@@ -200,10 +206,11 @@ button:active {
     .top {
     margin-top: 4em;
 }
-    
+ 
     
 }
 
 @media only screen and (min-width: 60em) {
+    
 
 }
